feat(db): adaptar backend al modelo usuario + profesor + estudiante
- Refactor de Usuario: quita docenteId, edad, genero. Agrega usuario (username unico generado desde el correo)
- Nuevas entidades Profesor y Estudiante como subtablas 1:1 de usuarios
- Repositorios completos: ProfesorRepository y EstudianteRepository con adapters
- AuthService.registroDocente crea usuarios + profesor en una transaccion
- CargaMasivaEstudiantesService crea usuarios + estudiante con edad y genero
- Parser Excel lee columnas por nombre de header (no por indice) y acepta variaciones
- Devuelve contrasenaGenerada en la respuesta de carga masiva
- EquipoService y PartidaService deshabilitados temporalmente (Fase 2/3)
- application.yml: ddl-auto validate, default_schema public, currentSchema en URL
- Tests: 12 verdes (6 Auth + 6 Carga Masiva)